--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,18 +8,17 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
-
+        java-version: '17'
+        distribution: 'adopt'
+    - name: Build with Maven
+      run: mvn --batch-mode --update-snapshots package
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
